@@ -2,11 +2,11 @@
 discord bot. boxes. yes
 
 # running
-##### from a jar file:
-1. download the javafx sdk from [here](https://gluonhq.com/products/javafx/)
-2. clone this repository and build the jar file
-3. run the jar with the VM argument *--module-path C:/path/to/javafx/sdk/lib --add-modules javafx.controls,javafx.fxml*
+### from a jar file:
+1. go to [the upload-artifact section of the actions page](https://github.com/Ioxom/ioxbox/actions)
+2. click on the most recent job
+3. download and run
 
-##### from the sources
+### from the sources
 1. clone this repository
 2. run `gradlew run`
